# IDS706_alejandroparedeslatorre_individualproject2_rustsql

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  python_output.txt  requirements.txt  rust_output.txt
.github/workflows/: CI.yml
lib/: crud_operations.py  extract_transform_load.py  times.py
src/: crud.rs  etl.rs  main.rs  times.rs
src/data/: UniversitiesDB.db
