[package]
name = "alejandroparedeslatorre_sql"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_cmd = "^2.0"
predicates = "0.9"
log = "0.4.22"
env_logger = "0.11.5"